--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,13 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
-
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
 /*-----------------------------------*\
   #main.css
 \*-----------------------------------*/
